remove unused functions, file now has 0 warnings